--- a/src/main/resources/com/project/controller/User_Page.fxml
+++ b/src/main/resources/com/project/controller/User_Page.fxml
@@ -138,7 +138,9 @@
                   <Image url="@Assests/clarity_plane-line.png" />
                </image>
             </ImageView>
-            <MFXButton id="logout" fx:id="Logout" layoutX="166.0" layoutY="335.0" onMouseClicked="#Logout" prefHeight="40.0" prefWidth="80.0" style="-fx-font-size: 17;" styleClass="btn" text="Logout" />
+            <MFXButton id="logout" fx:id="Logout" layoutX="166.0" layoutY="370.0" onMouseClicked="#Logout" prefHeight="40.0" prefWidth="80.0" style="-fx-font-size: 17;" styleClass="btn" text="Logout" />
+            <Label layoutX="17.0" layoutY="322.0" prefHeight="27.0" prefWidth="85.0" styleClass="label-main" stylesheets="@Assests/Fx.css" text="Balance :" textOverrun="CENTER_WORD_ELLIPSIS" />
+            <Label fx:id="Email1" accessibleText="Name Will Be Here" layoutX="116.0" layoutY="323.0" prefHeight="26.0" prefWidth="132.0" stylesheets="@Assests/Fx.css" text="\$25" textOverrun="CENTER_WORD_ELLIPSIS" />
          </children>
       </AnchorPane>
    </right>
