--- a/src/main/resources/com/project/controller/User_Page_Checki_in.fxml
+++ b/src/main/resources/com/project/controller/User_Page_Checki_in.fxml
@@ -53,7 +53,7 @@
                         <Image url="@Assests/tab2.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="Ref" layoutX="34.0" layoutY="109.0" onMouseClicked="#toggle" style="-fx-text-fill: white;" text="Ref. No" />
+                  <Label fx:id="Ref" layoutX="34.0" layoutY="109.0" onMouseClicked="#toggle" style="-fx-text-fill: white;" text="Res. No" />
                   <Label fx:id="Ticket" layoutX="118.0" layoutY="109.0" onMouseClicked="#toggle" text="Ticket" textFill="#1b1b1b" />
                   <Label layoutX="24.0" layoutY="47.0" prefHeight="28.0" prefWidth="476.0" style="-fx-font-size: 1em;" text="Check-in starts 72 hours before departure and ends 2 -hours before">
                      <font>
@@ -114,7 +114,9 @@
                   <Image url="@Assests/clarity_plane-line.png" />
                </image>
             </ImageView>
-            <MFXButton id="logout" fx:id="Logout" layoutX="166.0" layoutY="335.0" onMouseClicked="#Logout" prefHeight="40.0" prefWidth="80.0" style="-fx-font-size: 17;" styleClass="btn" text="Logout" />
+            <MFXButton id="logout" fx:id="Logout" layoutX="166.0" layoutY="370.0" onMouseClicked="#Logout" prefHeight="40.0" prefWidth="80.0" style="-fx-font-size: 17;" styleClass="btn" text="Logout" />
+            <Label fx:id="Email1" accessibleText="Name Will Be Here" layoutX="118.0" layoutY="322.0" prefHeight="26.0" prefWidth="124.0" stylesheets="@Assests/Fx.css" text="\$25" textOverrun="CENTER_WORD_ELLIPSIS" />
+            <Label layoutX="17.0" layoutY="321.0" prefHeight="27.0" prefWidth="90.0" styleClass="label-main" stylesheets="@Assests/Fx.css" text="Balance:" textOverrun="CENTER_WORD_ELLIPSIS" />
          </children>
       </AnchorPane>
    </right>
